// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseCommonConfig > dev.xxx 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/aaaa",
      "port": "<port>",
    },
    "hmr": false,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "compress": false,
    "headers": {
      "X-Custom-Foo": "bar",
    },
    "historyApiFallback": true,
    "host": "xxx.xxx",
    "htmlFallback": false,
    "https": {
      "cert": "xxx",
      "key": "xxxx",
    },
    "port": 8081,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > dev.xxx 2`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > html.faviconByEntries 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "favicon": [Function],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > html.faviconByEntries 2`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "favicon": [
      "/https/www.foo.com/default.ico",
      [Function],
    ],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > html.faviconByEntries 3`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "inject": [Function],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > html.faviconByEntries 4`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "inject": [
      "body",
      [Function],
    ],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > html.metaByEntries 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "meta": [Function],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > html.metaByEntries 2`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "meta": [
      {
        "charset": {
          "charset": "UTF-8",
        },
      },
      [Function],
    ],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > html.templateByEntries 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "outputStructure": "nested",
    "template": [Function],
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > html.templateByEntries 2`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "outputStructure": "nested",
    "template": [
      "static/index.html",
      [Function],
    ],
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > html.templateParametersByEntries 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "outputStructure": "nested",
    "templateParameters": [Function],
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > html.templateParametersByEntries 2`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "outputStructure": "nested",
    "templateParameters": [
      {
        "name": "jack",
      },
      [Function],
    ],
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > html.titleByEntries 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "outputStructure": "nested",
    "title": [
      "",
      [Function],
    ],
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > html.titleByEntries 2`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "outputStructure": "nested",
    "title": [
      "Default",
      [Function],
    ],
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > output.cssModuleLocalIdentName 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "cssModules": {
      "localIdentName": "[local]-[hash:base64:6]",
    },
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > output.disableCssModuleExtension 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "cssModules": {
      "auto": [Function],
    },
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > output.enableInlineScripts 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "inlineScripts": true,
    "polyfill": "entry",
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > output.enableInlineStyles 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "inlineStyles": true,
    "polyfill": "entry",
  },
  "performance": {},
  "plugins": [],
  "security": {},
  "server": {
    "htmlFallback": false,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;
